--- a/style.css
+++ b/style.css
@@ -6,11 +6,23 @@
 }
 
 
+/* 
+dt: dark theme
+lt: light theme
+*/
+
+:root {
+    --dt-accent-color: #34CAEB;
+    --dt-bg-gradient: linear-gradient(90.1deg, rgb(14 14 14) 14.5%, rgb(74, 74, 74) 135.4%);
+    --dt-font-color: white;
+    --dt-navbar-color: rgba(0, 0, 0, 0.6);
+}
+
 .portfolio-container {
     display: flex;
     flex-direction: column;
-    background-image: linear-gradient(90.1deg, rgb(14 14 14) 14.5%, rgb(74, 74, 74) 135.4%);
-    color: white;
+    background-image: var(--dt-bg-gradient);
+    color: var(--dt-font-color);
     min-height: 100vh;
     font-family: "Poppins", sans-serif;
 }
@@ -20,7 +32,7 @@ header {
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: var(--dt-navbar-color);
     backdrop-filter: blur(10px);
     z-index: 1000;
     padding: 1em 0;
@@ -37,7 +49,7 @@ nav ul {
 }
 
 .navbar a{
-    color: white;
+    color: var(--dt-font-color);
     text-decoration: none;
     font-size: 18px;
     font-weight: 500;
@@ -70,6 +82,7 @@ main {
 
 .name {
     font-family: "Permanent Marker", sans-serif;
+    color: #34CAEB;
     display: flex;
     flex-direction: column;
     font-size: 4em;
