--- a/style.css
+++ b/style.css
@@ -12,19 +12,27 @@ lt: light theme
 */
 
 :root {
-    --dt-accent-color: #34CAEB;
+    --dt-accent-color: #3cceef;
+    --dt-accent-active-color: #71dcf4;
+    --dt-accent-text-color:black;
     --dt-bg-gradient: linear-gradient(90.1deg, rgb(14 14 14) 14.5%, rgb(74, 74, 74) 135.4%);
     --dt-font-color: white;
     --dt-navbar-color: rgba(0, 0, 0, 0.6);
+
+    /* for navigating */
+    --scroll-margin-top: 4em;
 }
 
 .portfolio-container {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background-image: var(--dt-bg-gradient);
     color: var(--dt-font-color);
     min-height: 100vh;
     font-family: "Poppins", sans-serif;
+    font-size: 1.2em;
 }
 
 /* --------------------Header section------------------- */
@@ -64,11 +72,13 @@ main {
     gap: 12em;
     margin: 3em;
     flex-grow: 1;
+    width: 85vw;
 }
 
 /* >>>>>>>> HOME <<<<<<<< */
 .home {
     margin-top: 12em;
+    scroll-margin-top: 15em;
 }
 .intro-container {
     display: flex;
@@ -77,12 +87,12 @@ main {
 
 .intro {
     width: 40%;
-    margin-left: 4em;
+    /* margin-left: 4em; */
 }
 
 .name {
     font-family: "Permanent Marker", sans-serif;
-    color: #34CAEB;
+    color: var(--dt-accent-color);
     display: flex;
     flex-direction: column;
     font-size: 4em;
@@ -112,6 +122,103 @@ main {
 
 
 /* >>>>>>>> ABOUT ME <<<<<<<< */
+.about-me {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    scroll-margin-top: var(--scroll-margin-top);
+}
+
+.heading {
+    font-size: 3.2em;
+    font-weight: bold;
+    margin-bottom: 0.3em;
+}
+
+.about-me-text {
+    width: 80%;
+    text-align: center;
+    margin-bottom: 3em;
+}
+
+.skill-heading {
+    font-size: 2.2em;
+    font-weight: bold;
+}
+
+.skill-section {
+    width: 80%;
+    font-size: 1.3em;
+    display: flex;
+    justify-content: space-between;
+}
+
+.skill-section ul {
+    list-style-type: none;
+}
+
+
+.skill-section-heading {
+    font-size: 1.5em;
+    text-decoration: underline;
+    margin-bottom: 0.3em;
+}
+
+.skill-section {
+    position: relative;
+    text-align: center;
+}
+
+.languages::after {
+    content: '';
+    position: absolute;
+    height: 7em;
+    width: 0.1em;
+    border-radius: 2px;
+    background-color: var(--dt-font-color);
+    top: 0.4em;
+    left: 11em;
+}
+
+.frameworks-tools::after {
+    content: '';
+    position: absolute;
+    height: 7em;
+    width: 0.1em;
+    border-radius: 2px;
+    background-color: var(--dt-font-color);
+    top: 0.4em;
+    right: 11em;
+}
+
+.downloads-section {
+    font-size: 1.4em;
+    border: 2px dashed gray;
+    border-radius: 0.5em;
+    padding: 10px;
+    margin-top: 2.4em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.downloads-btns button {
+    font-size: 0.8em;
+    width: 5em;
+    padding: 3px;
+    border-radius: 0.5em;
+    border: none;
+    background-color: var(--dt-accent-color);
+    color: var(--dt-accent-text-color);
+}
+
+.downloads-btns button:hover {
+    background-color: var(--dt-accent-active-color);
+    cursor: pointer;
+}
+
+
 /* >>>>>>>> PROJECTS <<<<<<<< */
 /* >>>>>>>> CONTACT <<<<<<<< */
 
